<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#ffffff">

    <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header_bk_color"
            android:padding="10dp"
    >
        <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
        />

    </RelativeLayout>

    <ScrollView
            android:layout_marginBottom="80dp"
            android:layout_below="@id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <TabHost
                android:id="@+id/tabhost"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="70dp">

                <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <EditText
                                android:id="@+id/bannerAppId"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:selectAllOnFocus="true"
                                android:hint="@string/appID_edit_message"
                                android:layout_weight="0.35"
                        />

                        <EditText
                                android:id="@+id/bannerSpotId"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:hint="@string/spotID_edit_message"
                                android:layout_weight="0.35"
                        />
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/buttons_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginTop="20dp"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                    >

                        <TextView
                                android:id="@+id/btn_load_banner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/load_banner"
                                android:layout_marginRight="10dp"
                                android:textColor="@color/text_color"
                                android:background="@drawable/button_background"
                                android:gravity="center"
                                android:onClick="onLoadBannerClicked"
                        />

                        <TextView
                                android:id="@+id/btn_load_rectangle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/load_rectangle"
                                android:textColor="@color/text_color"
                                android:background="@drawable/button_background"
                                android:gravity="center"
                                android:onClick="onLoadRectangleClicked"
                        />
                    </LinearLayout>

                    <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp">

                        <LinearLayout
                                android:id="@+id/ad_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                        />

                    </ScrollView>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <EditText
                                android:id="@+id/interstitialAppId"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:selectAllOnFocus="true"
                                android:hint="@string/appID_edit_message"
                                android:layout_weight="0.35"
                        />

                        <EditText
                                android:id="@+id/interstitialSpotId"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:hint="@string/spotID_edit_message"
                                android:layout_weight="0.35"
                        />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginTop="20dp"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                    >

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/load_interstitial"
                                android:textColor="@color/text_color"
                                android:background="@drawable/button_background"
                                android:gravity="center"
                                android:onClick="onLoadInterstitialClicked"
                                android:layout_marginRight="20dp"
                        />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/show_interstitial"
                                android:textColor="@color/text_color"
                                android:background="@drawable/button_background"
                                android:gravity="center"
                                android:onClick="onShowInterstitialAdClicked"
                        />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </TabHost>
    </ScrollView>

    <include layout="@layout/container_layout"/>

</RelativeLayout>